use source files with watch file. closes #1

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,31 +1,67 @@
+{# ------------------------------------------------------- #}
+
 {# YOUR HOMEPAGE #}
 
-{# First time seeing extend or blocks? Want to know how it works? Tutorial here: http://www.webhook.com #}
+{# Webhook uses the SWIG.js (like Djagno/Twig) templating system. Their documentation is here: #}
+{# http://paularmstrong.github.io/swig/docs/tags/ #}
+
+{# Learn about calling data into Webhook pages here: #}
+{# http://www.webhook.com/docs/template-rules-and-filters/ #}
+
+{# ------------------------------------------------------- #}
+
+{# Confused what extends and blocks do? Watch a primer: #}
+{# http://www.webhook.com/docs/template-inheritance-blocks/ #}
 {% extends "templates/partials/base.html" %}
+
+{# This sets our page <title>. It will append "- Homepage" to the site title defined in base. #}
+{% block title %}{% parent %} - Homepage{% endblock %}
 
 {% block content %}
 
-<h1>Hello <a href="http://getbootstrap.com/">Bootstrap</a></h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
 
-  <p>This is your homepage, located at /pages/index.html.</p>
+        <h1>Hello <a href="http://foundation.zurb.com/">Boostrap</a>!</h1>
 
-  <p><a class="btn btn-primary" href="/cms/">Looking for the CMS?</a></p>
+        <p>
+          This theme installed Bootstrap's 3.3.1 source LESS and Javascript files.
+          It also set up some <a href="http://gruntjs.com">Grunt</a> watch commands to build CSS from the <code>less</code> folder as you build.
+          You'll need to <strong>restart your local server</strong> to get it to operate properly.
+        </p>
 
-  {# Grabs the data to list all the content types (set as multiple) from the CMS. #}
-  {% set types = getTypes() %}
+        <h3>If you need to update boostrap.</h3>
 
-  {# If you have at least content page type, we show a list. #}
-  {% if types|size !== 0 %}
+        <ol>
+          <li>Open your terminal and navigate to this site's directory</li>
+          <li>Run <code>npm install -g bower</code></li>
+          <li>Run <code>bower update</code></li>
+          <li>Run <code>grunt copy</code></li>
+        </ol>
 
-    <h3>Content types you've created in the CMS so far.</h3>
+        <hr/>
 
-    <ul>
-    {% for type in types %}
-      <li><a href="{{ url(type) }}">{{ type.name }}</a></li>
-    {% endfor %}
-    </ul>
+        <p>This is your homepage, located at /pages/index.html.</p>
 
-  {% endif %}
+        <p><a href="/cms/" class="btn btn-primary">Looking for the CMS?</a></p>
 
+        {# If you have at least content page type, we show a list. #}
+        {% if cms_types|size !== 0 %}
+
+          <h3>Content types you've created in the CMS so far.</h3>
+
+          <ul>
+          {% for type in cms_types %}
+            <li><a href="{{ url(type) }}">{{ type.name }}</a></li>
+          {% endfor %}
+          </ul>
+
+        {% endif %}
+
+      </div>
+    </div>
+  </div>
 
 {% endblock %}
+
