Fixed bootstrap url on generated index.html

--- a/pages/index.html
+++ b/pages/index.html
@@ -23,7 +23,7 @@
     <div class="row">
       <div class="col-md-12">
 
-        <h1>Hello <a href="http://foundation.zurb.com/">Boostrap</a>!</h1>
+        <h1>Hello <a href="http://getbootstrap.com/">Boostrap</a>!</h1>
 
         <p>
           This theme installed Bootstrap's 3.3.1 source LESS and Javascript files.
